# ai-assessment

./: .gitignore  AI Dev Test.txt  ARCHITECTURE.md  BACKEND_SPEC.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  config.py  pyproject.toml
backend/adapters/embedding/: sentence_transformer.py
backend/adapters/holidays/: nager.py
backend/adapters/llm/: anthropic.py
backend/adapters/session_store/: sqlite.py
backend/adapters/vector_store/: chromadb.py
backend/agent/: graph.py  schemas.py  state.py
backend/agent/guards/: input_guard.py  output_guard.py
backend/agent/nodes/: answer.py  fallback.py  holidays.py  retrieve.py  router.py
backend/api/: main.py  models.py
backend/api/routes/: chat.py  health.py  ingest.py
backend/core/ports/: embedding.py  holidays.py  llm.py  session_store.py  vector_store.py
backend/data/chroma/: chroma.sqlite3
backend/knowledge/: chunker.py  ingest.py  retriever.py  tagger.py
backend/mcp_server/: holidays_mcp.py
backend/scripts/: eval.py
backend/services/: conversation.py  retry.py  sessions.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_chat_api.py
backend/tests/unit/: test_agent_graph.py  test_chat_routes.py  test_chunker_tagger.py  test_holidays_tool.py  test_input_guard.py  test_mcp_server.py  test_output_guard.py  test_retriever.py  test_retry.py  test_session_persistence.py
docs/: architecture.drawio  architecture.md
frontend/: .dockerignore  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  wrangler.jsonc
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: BlossomMark.tsx  ChatBubble.tsx  CitationList.tsx  Header.tsx  HealthBanner.tsx  HolidayBadge.tsx  SuggestionChips.tsx
frontend/src/context/: HealthContext.tsx
frontend/src/hooks/: useChat.ts  useHealth.ts
frontend/src/pages/: Chat.tsx  Ingest.tsx
