[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blossom-banking-helper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    # LLM orchestration
    "langchain-anthropic>=0.1.22",
    "langgraph>=0.2",
    "langchain-core>=0.2",
    # Vector store & embeddings
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    # PDF ingestion
    "pdfplumber>=0.11",
    "tiktoken>=0.7",
    # Persistence
    "aiosqlite>=0.20",
    # HTTP client
    "httpx>=0.27",
    # Config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Observability
    "structlog>=24.2",
    # Reliability
    "tenacity>=8.3",
    # MCP
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit>=1.7",
    "pre-commit>=3.7",
    "types-pyyaml",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "api*", "config*", "db*", "guards*", "ingestion*", "mcp_server*", "utils*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "E402", "E501", "B017"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_untyped_calls = false
warn_return_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["agent", "api", "db", "guards", "ingestion", "mcp_server", "utils"]
omit = ["tests/*"]

[tool.bandit]
skips = ["B101"]
